# src/main/java/com/jo2k/garagify/borrow/controller/BorrowController.java
@@ -3,8 +3,9 @@ package com.jo2k.garagify.borrow.controller;
 import com.jo2k.api.BorrowControllerApi;
 import com.jo2k.dto.BorrowGET;
 import com.jo2k.dto.BorrowPOST;
-import com.jo2k.garagify.borrow.service.IBorrowService;
+import com.jo2k.garagify.borrow.api.BorrowService;
 import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.validation.annotation.Validated;
@@ -12,30 +13,17 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.Map;
+
 @Validated
+@RequiredArgsConstructor
 @RestController
 public class BorrowController implements BorrowControllerApi {
 
-    private final IBorrowService borrowService;
+    private final BorrowService borrowService;
 
-    public BorrowController(IBorrowService borrowService) {
-        this.borrowService = borrowService;
-    }
-    public ResponseEntity<List<BorrowGET>> createBorrows(
-            @Valid @RequestBody List<@Valid BorrowPOST> borrowPOSTs) {
-
-        try {
-
-            System.out.println("AAa");
-            List<BorrowGET> result = borrowService.createBorrowsIfNotExistsAndAvailable(borrowPOSTs);
-            return ResponseEntity.status(HttpStatus.CREATED).body(result);
-        } catch (IllegalArgumentException e) {
-            System.out.println("AAa1");
-            e.printStackTrace();
-            return ResponseEntity
-                    .badRequest()
-                    .body((List<BorrowGET>) Map.of("message", e.toString()));
-        }
+    @Override
+    public ResponseEntity<List<BorrowGET>> createBorrow(@Valid @RequestBody List<@Valid BorrowPOST> borrowPOSTs) {
+        List<BorrowGET> result = borrowService.createBorrow(borrowPOSTs);
+        return ResponseEntity.status(HttpStatus.CREATED).body(result);
     }
 }
